working with hero page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,16 @@ body {
     overflow-x: hidden;
 }
 
+.btn-primary {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 207px;
+    height: 66px;
+    border-radius: 10px;
+    background-color: var(--primary-color);
+}
+
 .navbar {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -104,6 +114,7 @@ body {
     grid-template-columns: repeat(12, 1fr);
     padding: 0 50px;
     gap: 20px;
+    margin-top: 82px;
 }
 
 .hero__section::before {
@@ -151,4 +162,28 @@ body {
     height: 20px;
     z-index: -1;
     background-color: var(--secondary-color);
+}
+
+.hero__Desc {
+    width: 515px;
+    color: rgba(51, 27, 59, 0.66);
+    font-family: var(--secondary-font);
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 146.3%;
+    letter-spacing: 0.34px;
+    margin-top: 27px;
+}
+
+.hero__btn {
+    color: #fff;
+    font-family: var(--secondary-font);
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 137.3%;
+    letter-spacing: 0.34px;
+    text-transform: uppercase;
+    margin-top: 31px;
 }
