--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -61,6 +65,25 @@ body {
     line-height: normal;
     letter-spacing: 0.16px;
     text-transform: capitalize;
+    position: relative;
+}
+
+/* navlist hover  */
+.nav__list li::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 12px;
+    width: 100%;
+    height: 0;
+    background-color: var(--secondary-color);
+    opacity: 0.7;
+    transition: all 0.3s ease;
+    z-index: -1;
+}
+
+.nav__list li:hover::before {
+    height: 6px;
 }
 
 .navbar__logo {
@@ -107,8 +130,8 @@ body {
 
 .hero__section {
     position: relative;
-    margin-top: -75px;
-    height: 200px;
+    margin-top: -82px;
+    height: 618px;
     z-index: -1;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -122,7 +145,7 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    transform: translate(50%, -50%);
+    transform: translate(35%, -30%);
     width: 867.538px;
     height: 819.823px;
     background-image: url("../images/shape-1.png");
@@ -134,7 +157,7 @@ body {
     grid-column: 1 / span 5;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
 }
 
 .hero__content .hero__title {
@@ -186,4 +209,39 @@ body {
     letter-spacing: 0.34px;
     text-transform: uppercase;
     margin-top: 31px;
+}
+
+.hero__img {
+    grid-column: 7 / span 6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.hero__img::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-35%, -7%);
+    width: 444px;
+    height: 629.17px;
+    flex-shrink: 0;
+    background-image: url("../images/shape-2.png");
+    background-repeat: no-repeat;
+    z-index: -1;
+}
+
+.hero__img::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-25%, 13%);
+    width: 581px;
+    height: 498px;
+    border-radius: 581px;
+    border: 2px dashed #000;
+    z-index: -2;
 }
